<resources>
    <string name="app_name">Material</string>
    <string name="photo_of_the_day_stub">Photo of the day</string>
    <string name="search_wiki">Найти в Википедии</string>
    <string name="wiki_helper_text">Поищите термин в википедии</string>
    <string name="favourite">favourite</string>
    <string name="settings">settings</string>
    <string name="search">Search</string>
    <string name="today">Сегодня</string>
    <string name="yesterday">Вчера</string>
    <string name="day_before_yesterday">позавчера</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="error_code">418</string>
    <string name="earth">Earth</string>
    <string name="mars">Mars</string>
    <string name="system">System</string>
</resources>