<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".pictureoftheday.PictureOfTheDayFragment">


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layout"
        android:layout_width="401dp"
        android:layout_height="wrap_content"
        android:hint="@string/search_wiki"
        app:counterEnabled="true"
        app:counterMaxLength="20"
        app:endIconDrawable="@drawable/ic_wikipedia"
        app:endIconMode="custom"
        app:helperText="@string/wiki_helper_text"

        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chip_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingVertical="80dp"
        android:paddingStart="95dp"
        app:chipSpacingHorizontal="-20dp"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/today"
            style="@style/MyChipStyleStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:tag="chip1"
            android:text="@string/today"
            app:chipStartPadding="8dp" />

        <com.google.android.material.chip.Chip
            android:id="@+id/yesterday"
            style="@style/MyChipStyleMiddle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:tag="chip2"
            android:text="@string/yesterday" />

        <com.google.android.material.chip.Chip
            android:id="@+id/day_before_yesterday"
            style="@style/MyChipStyleEnd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:tag="chip3"
            android:text="@string/day_before_yesterday" />
    </com.google.android.material.chip.ChipGroup>
    <LinearLayout
        android:id="@+id/buttons_style"
        android:paddingTop="130dp"
        android:paddingStart="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/button_red"
            android:layout_width="114dp"
            android:layout_height="80dp"
            android:src="@drawable/firee" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/button_green"
            android:layout_width="93dp"
            android:layout_height="70dp"
            android:paddingTop="20dp"
            android:src="@drawable/green" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/button_blu"
            android:layout_width="78dp"
            android:layout_height="70dp"
            android:paddingTop="20dp"
            android:src="@drawable/water" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switch_night_mode"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/bottom_nav"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_anchorGravity="center" >

        <com.example.material.utils.EquilateralImageView
            android:id="@+id/image_view"
            android:layout_width="match_parent"
            android:layout_height="398dp"
            android:layout_gravity="center"
            android:contentDescription="@string/photo_of_the_day_stub"
            app:srcCompat="@drawable/ic_no_photo_vector" />
    </LinearLayout>

    <include android:id="@+id/lifeHack"
        layout="@layout/bottom_sheet_layout"/>


    <com.google.android.material.bottomappbar.BottomAppBar
        android:id="@+id/bottom_app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        app:fabAlignmentMode="center"
        app:navigationIcon="@drawable/ic_hamburger_menu_bottom_bar"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_anchor="@id/bottom_app_bar"
        app:srcCompat="@drawable/ic_plus_fab" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>